[refactor] jwt -> http basic
