# src/main/kotlin/com/arekalov/blps/dto/auth/RefreshTokenRequest.kt
@@ -1,8 +1,0 @@
-package com.arekalov.blps.dto.auth
-
-import jakarta.validation.constraints.NotBlank
-
-data class RefreshTokenRequest(
-    @field:NotBlank(message = "Refresh token cannot be blank")
-    val refreshToken: String,
-)
